# comfyui-promptflow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml
examples/: PromptFlow Example Workflow (Extended Mode with Wildcards & Variations).json  PromptFlow Example Workflow (LoRA Manager Integration).json  PromptFlow Example Workflow (Simple).json
nodes/: __init__.py  promptflow_core.py  promptflow_variations.py
presets/: negatives.json  quality.json  styles.json
web/comfyui/: promptflow_variations_widget.js  promptflow_widget.js
wildcards/: art_styles.txt  colors.txt  hair_colors.txt  lighting.txt
wildcards/characters/: fantasy.txt  scifi.txt
